syntax = "proto3";

package gophertask.gophertaskapi.v1;

import "gophertask/gophertaskapi/v1/status.proto";
import "gophertask/gophertaskapi/v1/subtask.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "buf/validate/validate.proto";

option go_package = "gophertask/gophertaskapi/v1";

message EpicV1 {
  string id = 1;
  string user_id = 2;
  string name = 3;
  string description = 4;
  TaskStatus status = 5;
  google.protobuf.Duration duration = 6;
  google.protobuf.Timestamp started_at = 7;
  repeated SubtaskV1 subtasks = 8;
}

message AddEpicRequestV1 {
  string name = 1 [(buf.validate.field).cel = {
    id: "name",
    expression: "size(this) <= 256",
    message: "Name should not exceed 256 characters"
  }];
  string description = 2 [(buf.validate.field).cel = {
    id: "description",
    expression: "size(this) <= 65536",
    message: "Description should not exceed 65536 characters"
  }];
  google.protobuf.Timestamp started_at = 3;
}

message AddEpicResponseV1 {}

message UpdateEpicRequestV1 {
  string id = 1 [(buf.validate.field).cel = {
    id: "id",
    expression: "size(this) >= 1",
    message: "ID should not be empty"
  }];
  string name = 2 [(buf.validate.field).cel = {
    id: "name",
    expression: "size(this) <= 256",
    message: "Name should not exceed 256 characters"
  }];
  string description = 3 [(buf.validate.field).cel = {
    id: "description",
    expression: "size(this) <= 65536",
    message: "Description should not exceed 65536 characters"
  }];
  google.protobuf.Timestamp started_at = 4;
}

message UpdateEpicResponseV1 {}

message DeleteEpicRequestV1 {
  string id = 1 [(buf.validate.field).cel = {
    id: "id",
    expression: "size(this) >= 1",
    message: "Deleted epic ID should not be empty"
  }];
}

message DeleteEpicResponseV1 {}

message GetEpicByIDRequestV1 {
  string id = 1 [(buf.validate.field).cel = {
    id: "id",
    expression: "size(this) >= 1",
    message: "Requested epic ID should not be empty"
  }];
}

message GetEpicByIDResponseV1 {
  EpicV1 epic = 1;
}

message GetEpicsRequestV1 {}

message GetEpicsResponseV1 {
  repeated EpicV1 epics = 1;
}